Integrate with the Crypto Checker.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,36 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+	checkTypes {
+            javaCompileOptions.annotationProcessorOptions.
+                    classNames.add("org.checkerframework.checker.crypto.CryptoChecker")
+            // Uncomment to do the strongboxbacked checking.
+            // javaCompileOptions.annotationProcessorOptions.arguments.put("lint", "strongboxbacked")
+            javaCompileOptions.annotationProcessorOptions.arguments.put("stubs", "hardwarebacked.astub")
+        }
+
+    }
+	compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
+}
+
+repositories {
+    mavenLocal()
+}
+
+configurations {
+    checkerFrameworkAnnotatedJDK {
+        description = 'a copy of JDK classes with Checker Framework type qualifiers inserted'
+    }
+    errorproneJavac {
+        description = 'required to run the Checker Framework.'
     }
 }
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -48,4 +76,25 @@ dependencies {
     implementation 'com.github.mcmrarm:arscwriter:master-SNAPSHOT'
     implementation 'com.github.mcmrarm:thememonkey:master-SNAPSHOT'
     testImplementation 'junit:junit:4.12'
+
+    ext.checkerFrameworkVersion = '3.1.1'
+    annotationProcessor "org.checkerframework:crypto-checker:0.1-SNAPSHOT"
+    implementation files("/home/xwt/Documents/workspace/opprop/crypto-checker/crypto-checker-qual-android/build/libs/crypto-checker-qual-android.jar")
+    checkerFrameworkAnnotatedJDK files("/home/xwt/Documents/workspace/opprop/crypto-checker/jdk8.jar")
+    compileOnly "org.checkerframework:checker-qual-android:${checkerFrameworkVersion}"
+    errorproneJavac 'com.google.errorprone:javac:9+181-r4173-1'
+
 }
+
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile).all { compile ->
+        if (compile.name.contains("CheckTypes")) {
+            compile.options.compilerArgs += [
+                    "-Xbootclasspath/p:${configurations.checkerFrameworkAnnotatedJDK.asPath}"
+            ]
+            options.fork = true
+            options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"]
+        }
+    }
+}
+
